test/files/neg/bug631.scala
implicit object Test {
  Console.println("foo")
}
