test/files/neg/bug631.check
bug631.scala:1: error: `implicit' modifier cannot be used for top-level objects
implicit object Test {
                ^
one error found
